--- a/image/new index.html
+++ b/image/new index.html
@@ -28,7 +28,7 @@
  <blockquote>unchanged. It was popularised in the 1960s with the release of Letraset
  sheets containing Lorem Ipsum passages, <i> and more recently with desktop</i>
  publishing software like Aldus PageMaker including versions of Lorem Ipsums</blockquote>
- <img src="image%20cat.jpg" alt="this is a picture of a cat">
+ <a href="file:///C:/Users/HP/Desktop/Html 02/iindex.html"><img src="image%20cat.jpg" alt="this is a picture of a cat"></a>
 
 <pre>Lorem Ipsum has been the industry's <b>standard dummy text ever since </b> the
  1500s, when an unknown printer took a galley of type and scrambled it 
@@ -48,13 +48,17 @@
 <li>javascript</li>
 <li>Wordpress</li>
 
-</ol><
+</ol>
 
 
 
 
 
 </ul>
+
+
+<p>
+<a href="http://google.com" title="Awesome Search Engines"><button>Google</button></a></p>
 
 
 
